# invest-openapi-rs-sdk

./: .gitignore  Cargo.toml  README.md  invest-openapi-rs-sdk.code-workspace
src/: lib.rs  rest_client.rs
src/rest_client/: mod.rs  types.rs
