[package]
name = "invest-openapi-rs-sdk"
version = "0.1.0"
authors = ["Denis Evsyukov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.32"
attohttpc = { version = "0.15", features = ["json"] }
url = "2.1.1"